--- a/src/main/fabric8/deployment.yml
+++ b/src/main/fabric8/deployment.yml
@@ -12,11 +12,19 @@ spec:
               cpu: "1.0"
               memory: 512Mi
           env:
-          - name: AMQP_SERVICE_NAME
-            value: messaging-enmasse.192.168.64.1.nip.io
           - name: AMQP_USERNAME
             value: admin
           - name: AMQP_PASSWORD
-            value: admin
+            value: test
+          - name: AMQP_SERVICE_NAME
+            valueFrom:
+              configMapKeyRef:
+                name: karaf-camel-amq-config
+                key: service.host
+          - name: AMQP_SERVICE_PORT
+            valueFrom:
+              configMapKeyRef:
+                name: karaf-camel-amq-config
+                key: service.port.amqps
           - name: AMQP_PARAMETERS
             value: transport.trustAll=true&transport.verifyHost=false&amqp.idleTimeout=120000
